momentuHMM 2.0.0 2021-11-16
-----------------
NEW FEATURES

* continuous-time hidden Markov models can now be fitted using 'fitCTHMM' (and 'MIfitCTHMM') and simulated using 'simCTHMM' (or 'simHierCTHMM' for hierarchical continuous-time models)

* new data stream distribution "ctds" for (multistate) continuous-time discrete-space movement models, which can be prepared, fitted, and simulated using the functions 'prepCTDS', 'fitCTHMM' (or 'MIfitCTHMM'), and 'simCTDS' (or 'simHierCTDS' for hierarchical models), respectively.

* special pseudo-design matrix function 'langevin' has been added for simulating and fitting discrete-time approximations of the (multistate) Langevin diffusion model as a multivariate normal random walk (i.e. using the "rw_mvnorm2" or "rw_mvnorm3" data stream distributions)

* 'export' argument added to simulation and model fitting functions for exporting formula objects from the global environment when ncores>1

CHANGES

* when the probability density for a data stream observation is zero for all states, a warning is triggered and .Machine$double.xmin is used to avoid division by zero within the forward algorithm

* raster package moved to 'Imports'

BUG FIXES

* getParDM did not properly calculate working scale parameters for categorical distribution parameters when DM included covariates or constraints


momentuHMM 1.5.4 2021-09-02
-----------------
NEW FEATURES

* CIreal argument 'm' will now accept a 'miHMM' object

CHANGES

* removed implicit conversions in C++ code that triggered compilation warnings on macOS with -Wconversion -Wno-sign-conversion in CPPFLAGS

BUG FIXES

* when using the normal random walk data stream distributions ("rw_norm", "rw_mvnorm2", or "rw_mvnorm3") in fitHMM (and MIfitHMM), any additional data streams were erroneously offset by one time step during model fitting; previous analyses using a normal random walk data stream in addition to any other data stream(s) should be re-run
